# Gelato-Relay-Wrapper

./: Cargo.toml  LICENSE  README.md  URI.txt  deployment.json  jest.config.js  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.yaml  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: build-and-test.yaml  deployment.yaml  publish.yaml
src/: lib.rs  schema.graphql
tests/: e2e.spec.ts
tests/types/: polywrap.yaml
